<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pr_av"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/advert_item_im_descr"
                app:srcCompat="@drawable/avatar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pr_name_sir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/user_name"
                    android:textSize="@dimen/ad_i_field_value_size" />


                <TextView
                    android:id="@+id/pr_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/pr_user_place"
                    android:textSize="@dimen/ad_i_field_value_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="@string/pr_suc_deals"
                        android:textSize="@dimen/ad_i_field_size" />

                    <TextView
                        android:id="@+id/pr_suc_deals"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="12"
                        android:textSize="@dimen/ad_i_field_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="@string/pr_rating"
                        android:textSize="@dimen/ad_i_field_size" />

                    <TextView
                        android:id="@+id/pr_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="4.6"
                        android:textSize="@dimen/ad_i_field_size" />
                </LinearLayout>

                <TextView
                    android:id="@+id/pr_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/user_tel"
                    android:textSize="@dimen/ad_i_field_size" />

                <TextView
                    android:id="@+id/pr_vk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/user_vk"
                    android:textSize="@dimen/ad_i_field_size" />

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pr_answers"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pr_b_from_arend"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pr_b_from_zaem"/>

        </LinearLayout>

        <!-- здесь или фрагмент с реквью или просто реквью -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/review_list"
            android:name="ru.kazakov.finalproject.advertFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="LinearLayoutManager"
            tools:context="ru.kazakov.finalproject.AdvertFragment"
            tools:listitem="@layout/fragment_advert" />

    </LinearLayout>

</RelativeLayout>