<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_margin="6dp">

    <ImageView
        android:id="@+id/ad_im"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/advert_item_im_descr"
        app:srcCompat="@drawable/advert_im_placehlder"
        />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="5.23">

        <TextView
            android:id="@+id/ad_name"
            android:text="@string/name_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/ad_price"
            android:text="@string/price_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:textAppearance="?attr/textAppearanceListItem"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/ad_name"/>

        <TextView
            android:id="@+id/ad_place"
            android:text="@string/place_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:textAppearance="?attr/textAppearanceListItem"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/ad_price"/>


    </RelativeLayout>
</LinearLayout>
